--- a/dasar1/part9/angka.html
+++ b/dasar1/part9/angka.html
@@ -8,8 +8,8 @@
 <body>
     <!-- masukan angka -->
     <form action="/submit" method="post">
-        <label for="quantity">Masukan angka:</label>
-        <input type="number" id="quantity" name="quantity" required>
+        <label for="angka">Masukan angka:</label>
+        <input type="number" id="angka" name="angka" required>
         
         <button type="submit">Submit</button>
       </form>
